ajuste promoções setembro/24

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container">
     <!--POLÍTICA COMERCIAL-->
     <h1>Política Comercial</h1>
-    <h6>Agosto/2024</h6>
+    <h6>Setembro/2024</h6>
     <div class="accordion accordion-flush" id="accordion-politica-comercial">
       <div class="accordion-item">
         <h2 class="accordion-header">
@@ -81,166 +81,6 @@
 
 
     <div class="row">
-      
-        <!--Bloco de promoção-->
-        <div class="col-sm-4">
-          <!--Card da Promoção-->
-          <div class="card mb-3">
-            <img src="./assets/img-cards/sprint-final.png" class="card-img-top img-fluid imgCard" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Sprint Final</h5>
-              <p class="card-text"><strong>Pasta:</strong> Leite e Corte<br>
-                <!--Validade da Campanha-->
-                <div class="campanha" data-validade="2024-08-31"> 
-                  <i class="icon"></i><strong>Validade:</strong><br> 31 de Agosto de 2024 (até 18:00h)
-                </div>
-                <!--Fim da Valodade da Campanha-->
-              </p>
-              <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#sprintfinal">
-                Material da Campanha
-              </button>
-            </div>
-          </div>
-          <!--Fim do Card da Promoção-->
-
-          <!-- Modal -->
-          <div class="modal fade" id="sprintfinal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="exampleModalLabel">Sprint Final</h1>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                  <div class="d-grid gap-2 ">
-                    <h6>Documentação</h6>
-                    <a href="./promocoes/SPRINT-FINAL/DCO.pdf" target="_blank" class="btn btn-warning">
-                      <i class="fa-solid fa-info"></i>
-                      DCO
-                    </a>
-                    <h6>Corte Zebu</h6>
-                    <a href="./promocoes/SPRINT-FINAL/CORTE-ZEBU-40DS.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preços > 40 doses
-                    </a>
-                    <a href="./promocoes/SPRINT-FINAL/CORTE-ZEBU-100DS.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preços Mix 1500 doses
-                    </a>
-                    <a href="https://drive.google.com/file/d/1_vYKVq3qGX8Ju61M2pUdfJlZCAAGTYh9/view?usp=drive_link" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-book"></i>
-                      Catálogo Corte Zebu
-                    </a>
-
-                    <h6>Corte Europeu</h6>
-                    <a href="./promocoes/SPRINT-FINAL/CORTE-EUROPEU-40DS.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preços > 40 doses
-                    </a>
-                    <a href="./promocoes/SPRINT-FINAL/CORTE-EUROPEU-100DS.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preços Mix 1500 doses
-                    </a>
-                    <a href="https://drive.google.com/file/d/1DY_zv59XH4oe3py3fn8jDJRqzCAuyCIf/view?usp=drive_link" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-book"></i>
-                      Catálogo Corte Europeu
-                    </a>
-
-                    <h6>Leite Zebu</h6>
-                    <a href="./promocoes/SPRINT-FINAL/LEITE-ZEBU-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preços Convencional
-                    </a>
-                    <a href="./promocoes/SPRINT-FINAL/LEITE-ZEBU-SEXADO.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preços Sexado
-                    </a>
-                    <a href="https://drive.google.com/file/d/1tBfFgU3NzpDotiZB-eU-bkyzGp52y9Xt/view?usp=drive_link" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-book"></i>
-                      Catálogo Leite Zebu
-                    </a>
-
-                    <h6>Leite Europeu</h6>
-                    <a href="./promocoes/SPRINT-FINAL/LEITE-EUROPEU-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preços Convencional
-                    </a>
-                    <a href="./promocoes/SPRINT-FINAL/LEITE-EUROPEU-SEXADO.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preços Sexado
-                    </a>
-                    <a href="https://drive.google.com/file/d/1XM69u75irwgDTg4F492K4ngUVFVuCjlq/view?usp=drive_link" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-book"></i>
-                      Catálogo Leite Europeu
-                    </a>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-          </div>
-          <!--Fim da Modal-->
-        </div>
-        <!--Fim do Bloco da Promoção-->
-
-        <!--Bloco de promoção-->
-        <div class="col-sm-4">
-          <!--Card da Promoção-->
-          <div class="card mb-3">
-            <img src="./assets/img-cards/CAMPANHA-KATAYAMA.png" class="card-img-top img-fluid imgCard" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Semana Katayama</h5>
-              <p class="card-text"><strong>Pasta:</strong> Corte Zebu<br>
-                <!--Validade da Campanha-->
-                <div class="campanha" data-validade="2024-08-31"> 
-                  <i class="icon"></i><strong>Validade:</strong><br> 31 de Agosto de 2024 (até 18:00h)
-                </div>
-                <!--Fim da Valodade da Campanha-->
-              </p>
-              <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#KATAYAMA">
-                Material da Campanha
-              </button>
-            </div>
-          </div>
-          <!--Fim do Card da Promoção-->
-
-          <!-- Modal -->
-          <div class="modal fade" id="KATAYAMA" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="exampleModalLabel">Semana Katayama</h1>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                  <div class="d-grid gap-2 ">
-                    <h6>Documentação</h6>
-                    <a href="./promocoes/SEMANA-KATAYAMA/DCO.pdf" target="_blank" class="btn btn-warning">
-                      <i class="fa-solid fa-info"></i>
-                      DCO
-                    </a>
-                    <h6>Corte Zebu</h6>
-                    <a href="./promocoes/SEMANA-KATAYAMA/PRECO-ACIMA-DE-40-DOSES.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preços > 40 doses
-                    </a>
-                    <a href="./promocoes/SEMANA-KATAYAMA/PRECO-ACIMA-DE-500-DOSES.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preços Mix 2000 doses
-                    </a>
-                    <a href="./promocoes/SEMANA-KATAYAMA/CATALOGO.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-book"></i>
-                      Catálogo Semana Katayama
-                    </a>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-          </div>
-          <!--Fim da Modal-->
-        </div>
-        <!--Fim do Bloco da Promoção-->
 
         <!--Bloco de promoção-->
         <div class="col-sm-4">
@@ -251,8 +91,8 @@
               <h5 class="card-title">Expogenética 2024</h5>
               <p class="card-text"><strong>Pasta:</strong> Corte Zebu<br>
                 <!--Validade da Campanha-->
-                <div class="campanha" data-validade="2024-08-31"> 
-                  <i class="icon"></i><strong>Validade:</strong><br> 31 de Agosto de 2024 (até 18:00h)
+                <div class="campanha" data-validade="2024-09-30"> 
+                  <i class="icon"></i><strong>Validade: PRORROGADA</strong><br> 30 de Setembro de 2024 (até 18:00h)
                 </div>
                 <!--Fim da Valodade da Campanha-->
               </p>
