--- a/index.html
+++ b/index.html
@@ -141,6 +141,113 @@
           <!--Fim da Modal-->
         </div>
         <!--Fim do Bloco da Promoção-->
+        <!--Bloco de promoção-->
+        <div class="col-sm-4">
+          <!--Card da Promoção-->
+          <div class="card mb-3">
+            <img src="./promocoes/CONVENCAO/IMG-CARD.png" class="card-img-top img-fluid imgCard" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Convenção 2024</h5>
+              <p class="card-text"><strong>Pasta:</strong> TODAS<br>
+                <!--Validade da Campanha-->
+                <div class="campanha" data-validade="2024-09-27"> 
+                  <i class="icon"></i><strong>Validade:</strong><br> 27 de Setembro de 2024 (até 18:00h)
+                </div>
+                <!--Fim da Valodade da Campanha-->
+              </p>
+              <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#convencao">
+                Material da Campanha
+              </button>
+            </div>
+          </div>
+          <!--Fim do Card da Promoção-->
+
+          <!-- Modal -->
+          <div class="modal fade" id="convencao" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Convenção 2024</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="d-grid gap-2 ">
+                    <h6>Documentação</h6>
+                    <a href="./promocoes/CONVENCAO/DCO.pdf" target="_blank" class="btn btn-warning">
+                      <i class="fa-solid fa-info"></i>
+                      DCO
+                    </a>
+                    <h6>Material da Campanha</h6>
+                    <h6>Corte Zebu</h6>
+                    <a href="./promocoes/CONVENCAO/PRECO-CORTE-ZEBU-40DS.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preço CV - 40ds
+                    </a>
+                    <a href="./promocoes/CONVENCAO/PRECO-CORTE-ZEBU-100DS.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preço CV - MIX 1500ds
+                    </a>
+                    <a href="./promocoes/CONVENCAO/PRECO-CORTE-ZEBU-SEXADO.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preço SF - MIX 80ds
+                    </a>
+                    <a href="./promocoes/CONVENCAO/CATALOGO-CORTE-ZEBU_compressed.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-book"></i>
+                      Catálogo - Corte Zebu
+                    </a>
+                    <hr>
+                    <h6>Corte Europeu</h6>
+                    <a href="./promocoes/CONVENCAO/PRECO-CORTE-EUROPEU-40DS.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preço CV - 40ds
+                    </a>
+                    <a href="./promocoes/CONVENCAO/PRECO-CORTE-EUROPEU-100DS.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preço CV - MIX 1500ds
+                    </a>
+                    <a href="https://drive.google.com/file/d/13gTl_WSFqfvMdGbv1-vLRr1WCv5mlG2b/view?usp=drive_link" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-book"></i>
+                      Catálogo - Corte Europeu
+                    </a>
+                    <hr>
+                    <h6>Leite Zebu</h6>
+                    <a href="./promocoes/CONVENCAO/PRECO-LEITE-ZEBU-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preço Convencional
+                    </a>
+                    <a href="./promocoes/CONVENCAO/PRECO-LEITE-ZEBU-SEXADO.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preço Sexado
+                    </a>
+                    <a href="./promocoes/CONVENCAO/CATALOGO-LEITE-ZEBU_compressed.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-book"></i>
+                      Catálogo - Leite Zebu
+                    </a>
+                    <hr>
+                    <h6>Leite Europeu</h6>
+                    <a href="./promocoes/CONVENCAO/PRECO-LEITE-EUROPEU-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preço Convencional
+                    </a>
+                    <a href="./promocoes/CONVENCAO/PRECO-LEITE-EUROPEU-SEXADO.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preço Sexado
+                    </a>
+                    <a href="./promocoes/CONVENCAO/CATALOGO-LEITE-EUROPEU_compressed.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-book"></i>
+                      Catálogo - Leite Europeu
+                    </a>
+                    <hr>
+                    
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+          <!--Fim da Modal-->
+        </div>
+        <!--Fim do Bloco da Promoção-->
 
     </div>
     <script src="./navbar.js"></script>
