inserção das promoções outubro/2024

--- a/navbar.html
+++ b/navbar.html
@@ -33,9 +33,15 @@
         </a>
         <ul class="dropdown-menu">
           <li>
-            <a class="dropdown-item" target="_blank" href="/crv-brazil/promocoes/herdoptimizer/REGULAMENTO HERDOPTIMIZER.pdf">
+            <a class="dropdown-item" target="_blank" href="/crv-brazil/servicos/herdopitimizer.pdf">
               <i class="fa-solid fa-cow"></i>
               Herdoptimizer
+            </a>
+          </li>
+          <li>
+            <a class="dropdown-item" target="_blank" href="/crv-brazil/servicos/multitouros.pdf">
+              <i class="fa-solid fa-dna"></i>
+              Multitouros
             </a>
           </li>
           <li>
