--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container">
     <!--POLÍTICA COMERCIAL-->
     <h1>Política Comercial</h1>
-    <h6>Setembro/2024</h6>
+    <h6>Outubro/2024</h6>
     <div class="accordion accordion-flush" id="accordion-politica-comercial">
       <div class="accordion-item">
         <h2 class="accordion-header">
@@ -86,17 +86,17 @@
         <div class="col-sm-4">
           <!--Card da Promoção-->
           <div class="card mb-3">
-            <img src="./promocoes/EXPOGENETICA/IMG-CARD.jpg" class="card-img-top img-fluid imgCard" alt="...">
+            <img src="./promocoes/FAZENDA-QUILOMBO/CAPA.png" class="card-img-top img-fluid imgCard" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Expogenética 2024</h5>
-              <p class="card-text"><strong>Pasta:</strong> Corte Zebu<br>
+              <h5 class="card-title">Fazenda Quilombo</h5>
+              <p class="card-text"><strong>Pasta:</strong> Leite Zebu<br>
                 <!--Validade da Campanha-->
-                <div class="campanha" data-validade="2024-09-30"> 
-                  <i class="icon"></i><strong>Validade: PRORROGADA</strong><br> 30 de Setembro de 2024 (até 18:00h)
+                <div class="campanha" data-validade="2025-08-31"> 
+                  <i class="icon"></i><strong>Validade</strong><br> 31 de Agosto de 2025 (até 18:00h)
                 </div>
                 <!--Fim da Valodade da Campanha-->
               </p>
-              <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#EXPOGENETICA">
+              <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#quilombo">
                 Material da Campanha
               </button>
             </div>
@@ -104,33 +104,19 @@
           <!--Fim do Card da Promoção-->
 
           <!-- Modal -->
-          <div class="modal fade" id="EXPOGENETICA" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal fade" id="quilombo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="exampleModalLabel">Expogenética 2024</h1>
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Fazenda Quilombo</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                   <div class="d-grid gap-2 ">
                     <h6>Documentação</h6>
-                    <a href="./promocoes/EXPOGENETICA/DCO.pdf" target="_blank" class="btn btn-warning">
+                    <a href="./promocoes/FAZENDA-QUILOMBO/DCO.pdf" target="_blank" class="btn btn-warning">
                       <i class="fa-solid fa-info"></i>
                       DCO
-                    </a>
-                    <h6>Material da Campanha</h6>
-                    <a href="./promocoes/EXPOGENETICA/TABELA SEMEN.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Tabela Sêmen
-                    </a>
-                    <a href="./promocoes/EXPOGENETICA/TABELA EMBRIOES.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Tabela Embriões
-                    </a>
-                    <hr>
-                    <a href="./promocoes/EXPOGENETICA/COMISSOES.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Tabela de Comissão
                     </a>
                   </div>
                 </div>
@@ -141,21 +127,22 @@
           <!--Fim da Modal-->
         </div>
         <!--Fim do Bloco da Promoção-->
+
         <!--Bloco de promoção-->
         <div class="col-sm-4">
           <!--Card da Promoção-->
           <div class="card mb-3">
-            <img src="./promocoes/CONVENCAO/IMG-CARD.png" class="card-img-top img-fluid imgCard" alt="...">
+            <img src="./promocoes/SAFRA-NOVA/CAPA.png" class="card-img-top img-fluid imgCard" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Convenção 2024</h5>
-              <p class="card-text"><strong>Pasta:</strong> TODAS<br>
+              <h5 class="card-title">Safra Nova</h5>
+              <p class="card-text"><strong>Pasta:</strong> Corte<br>
                 <!--Validade da Campanha-->
-                <div class="campanha" data-validade="2024-09-27"> 
-                  <i class="icon"></i><strong>Validade:</strong><br> 27 de Setembro de 2024 (até 18:00h)
+                <div class="campanha" data-validade="2024-10-31"> 
+                  <i class="icon"></i><strong>Validade:</strong><br> 31 de Outubro de 2024 (até 18:00h)
                 </div>
                 <!--Fim da Valodade da Campanha-->
               </p>
-              <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#convencao">
+              <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#safranova">
                 Material da Campanha
               </button>
             </div>
@@ -163,85 +150,170 @@
           <!--Fim do Card da Promoção-->
 
           <!-- Modal -->
-          <div class="modal fade" id="convencao" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal fade" id="safranova" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="exampleModalLabel">Convenção 2024</h1>
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Safra Nova</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                   <div class="d-grid gap-2 ">
                     <h6>Documentação</h6>
-                    <a href="./promocoes/CONVENCAO/DCO.pdf" target="_blank" class="btn btn-warning">
+                    <a href="./promocoes/SAFRA-NOVA/DCO.pdf" target="_blank" class="btn btn-warning">
                       <i class="fa-solid fa-info"></i>
                       DCO
                     </a>
+                    <a href="./promocoes/SAFRA-NOVA/COMISSAO.pdf" target="_blank" class="btn btn-warning">
+                      <i class="fa-solid fa-info"></i>
+                      Comissão
+                    </a>
+                    <hr>
                     <h6>Material da Campanha</h6>
                     <h6>Corte Zebu</h6>
-                    <a href="./promocoes/CONVENCAO/PRECO-CORTE-ZEBU-40DS.pdf" target="_blank" class="btn btn-primary">
+                    <a href="./promocoes/SAFRA-NOVA/PRECO-CORTE-ZEBU.pdf" target="_blank" class="btn btn-primary">
                       <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preço CV - 40ds
+                      Preço - Corte Zebu
                     </a>
-                    <a href="./promocoes/CONVENCAO/PRECO-CORTE-ZEBU-100DS.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preço CV - MIX 1500ds
-                    </a>
-                    <a href="./promocoes/CONVENCAO/PRECO-CORTE-ZEBU-SEXADO.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preço SF - MIX 80ds
-                    </a>
-                    <a href="./promocoes/CONVENCAO/CATALOGO-CORTE-ZEBU_compressed.pdf" target="_blank" class="btn btn-primary">
+                    <a href="./promocoes/SAFRA-NOVA/" target="_blank" class="btn btn-primary">
                       <i class="fa-solid fa-book"></i>
                       Catálogo - Corte Zebu
                     </a>
-                    <hr>
                     <h6>Corte Europeu</h6>
-                    <a href="./promocoes/CONVENCAO/PRECO-CORTE-EUROPEU-40DS.pdf" target="_blank" class="btn btn-primary">
+                    <a href="./promocoes/SAFRA-NOVA/PRECO-CORTE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
                       <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preço CV - 40ds
+                      Preço - Corte Europeu
                     </a>
-                    <a href="./promocoes/CONVENCAO/PRECO-CORTE-EUROPEU-100DS.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preço CV - MIX 1500ds
-                    </a>
-                    <a href="https://drive.google.com/file/d/13gTl_WSFqfvMdGbv1-vLRr1WCv5mlG2b/view?usp=drive_link" target="_blank" class="btn btn-primary">
+                    <a href="./promocoes/SAFRA-NOVA/" target="_blank" class="btn btn-primary">
                       <i class="fa-solid fa-book"></i>
                       Catálogo - Corte Europeu
                     </a>
-                    <hr>
-                    <h6>Leite Zebu</h6>
-                    <a href="./promocoes/CONVENCAO/PRECO-LEITE-ZEBU-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preço Convencional
-                    </a>
-                    <a href="./promocoes/CONVENCAO/PRECO-LEITE-ZEBU-SEXADO.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preço Sexado
-                    </a>
-                    <a href="./promocoes/CONVENCAO/CATALOGO-LEITE-ZEBU_compressed.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-book"></i>
-                      Catálogo - Leite Zebu
-                    </a>
-                    <hr>
-                    <h6>Leite Europeu</h6>
-                    <a href="./promocoes/CONVENCAO/PRECO-LEITE-EUROPEU-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preço Convencional
-                    </a>
-                    <a href="./promocoes/CONVENCAO/PRECO-LEITE-EUROPEU-SEXADO.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-file-invoice-dollar"></i>
-                      Preço Sexado
-                    </a>
-                    <a href="./promocoes/CONVENCAO/CATALOGO-LEITE-EUROPEU_compressed.pdf" target="_blank" class="btn btn-primary">
-                      <i class="fa-solid fa-book"></i>
-                      Catálogo - Leite Europeu
-                    </a>
-                    <hr>
-                    
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+          <!--Fim da Modal-->
+        </div>
+        <!--Fim do Bloco da Promoção-->
 
+        <!--Bloco de promoção-->
+        <div class="col-sm-4">
+          <!--Card da Promoção-->
+          <div class="card mb-3">
+            <img src="./promocoes/FUNCIONALIDADE-MAXIMA/CAPA.png" class="card-img-top img-fluid imgCard" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Funcionalidade Máxima</h5>
+              <p class="card-text"><strong>Pasta:</strong> Leite Europeu<br>
+                <!--Validade da Campanha-->
+                <div class="campanha" data-validade="2024-10-31"> 
+                  <i class="icon"></i><strong>Validade:</strong><br> 31 de Outubro de 2024 (até 18:00h)
+                </div>
+                <!--Fim da Valodade da Campanha-->
+              </p>
+              <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#funcionalidademaxima">
+                Material da Campanha
+              </button>
+            </div>
+          </div>
+          <!--Fim do Card da Promoção-->
+
+          <!-- Modal -->
+          <div class="modal fade" id="funcionalidademaxima" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Funcionalidade Máxima</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="d-grid gap-2 ">
+                    <h6>Documentação</h6>
+                    <a href="./promocoes/FUNCIONALIDADE-MAXIMA/DCO.pdf" target="_blank" class="btn btn-warning">
+                      <i class="fa-solid fa-info"></i>
+                      DCO
+                    </a>
+                    <hr>
+                    <h6>Material da Campanha</h6>
+                    <a href="./promocoes/FUNCIONALIDADE-MAXIMA/PRECO-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preço - Convencional
+                    </a>
+                    <a href="./promocoes/FUNCIONALIDADE-MAXIMA/PRECO-SEXADO.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preço - Sexado
+                    </a>
+                    <a href="./promocoes/FUNCIONALIDADE-MAXIMA/" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-book"></i>
+                      Catálogo 
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Fim da Modal-->
+        </div>
+        <!--Fim do Bloco da Promoção-->
+
+        <!--Bloco de promoção-->
+        <div class="col-sm-4">
+          <!--Card da Promoção-->
+          <div class="card mb-3">
+            <img src="./promocoes/COMPRE-E-GANHE/CAPA.png" class="card-img-top img-fluid imgCard" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Compre & Ganhe</h5>
+              <p class="card-text"><strong>Pasta:</strong> Leite Europeu<br>
+                <!--Validade da Campanha-->
+                <div class="campanha" data-validade="2024-10-31"> 
+                  <i class="icon"></i><strong>Validade:</strong><br> 31 de Outubro de 2024 (até 18:00h)
+                </div>
+                <!--Fim da Valodade da Campanha-->
+              </p>
+              <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#compreeganhe">
+                Material da Campanha
+              </button>
+            </div>
+          </div>
+          <!--Fim do Card da Promoção-->
+
+          <!-- Modal -->
+          <div class="modal fade" id="compreeganhe" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Compre & Ganhe</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="d-grid gap-2 ">
+                    <h6>Documentação</h6>
+                    <a href="./promocoes/FUNCIONALIDADE-MAXIMA/DCO.pdf" target="_blank" class="btn btn-warning">
+                      <i class="fa-solid fa-info"></i>
+                      DCO
+                    </a>
+                    <hr>
+                    <h6>Material da Campanha</h6>
+                    <h6>Convencional</h6>
+                    <a href="./promocoes/COMPRE-E-GANHE/PRECO-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preço - Convencional
+                    </a>
+                    <a href="./promocoes/COMPRE-E-GANHE/" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-book"></i>
+                      Catálogo - Convencional
+                    </a>
+                    <h6>Sexado</h6>
+                    <a href="./promocoes/COMPRE-E-GANHE/PRECO-SEXADO.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preço - Sexado
+                    </a>
+                    <a href="./promocoes/COMPRE-E-GANHE/" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-book"></i>
+                      Catálogo - Sexado
+                    </a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
