ajuste nos catálogos das promoções

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                       <i class="fa-solid fa-file-invoice-dollar"></i>
                       Preço - Corte Zebu
                     </a>
-                    <a href="./promocoes/SAFRA-NOVA/" target="_blank" class="btn btn-primary">
+                    <a href="./promocoes/SAFRA-NOVA/CAT-CZ-SAFRA-NOVA_compressed.pdf" target="_blank" class="btn btn-primary">
                       <i class="fa-solid fa-book"></i>
                       Catálogo - Corte Zebu
                     </a>
@@ -184,7 +184,7 @@
                       <i class="fa-solid fa-file-invoice-dollar"></i>
                       Preço - Corte Europeu
                     </a>
-                    <a href="./promocoes/SAFRA-NOVA/" target="_blank" class="btn btn-primary">
+                    <a href="./promocoes/SAFRA-NOVA/CAT-CE-SAFRA-NOVA_compressed.pdf" target="_blank" class="btn btn-primary">
                       <i class="fa-solid fa-book"></i>
                       Catálogo - Corte Europeu
                     </a>
@@ -243,7 +243,7 @@
                       <i class="fa-solid fa-file-invoice-dollar"></i>
                       Preço - Sexado
                     </a>
-                    <a href="./promocoes/FUNCIONALIDADE-MAXIMA/" target="_blank" class="btn btn-primary">
+                    <a href="./promocoes/FUNCIONALIDADE-MAXIMA/CAT-FUNCIONALIDADE-MAXIMA_compressed.pdf" target="_blank" class="btn btn-primary">
                       <i class="fa-solid fa-book"></i>
                       Catálogo 
                     </a>
@@ -299,7 +299,7 @@
                       <i class="fa-solid fa-file-invoice-dollar"></i>
                       Preço - Convencional
                     </a>
-                    <a href="./promocoes/COMPRE-E-GANHE/" target="_blank" class="btn btn-primary">
+                    <a href="./promocoes/COMPRE-E-GANHE/CAT-CV-COMPRE-E-GANHE_compressed.pdf" target="_blank" class="btn btn-primary">
                       <i class="fa-solid fa-book"></i>
                       Catálogo - Convencional
                     </a>
@@ -308,7 +308,7 @@
                       <i class="fa-solid fa-file-invoice-dollar"></i>
                       Preço - Sexado
                     </a>
-                    <a href="./promocoes/COMPRE-E-GANHE/" target="_blank" class="btn btn-primary">
+                    <a href="https://drive.google.com/file/d/1AHoOY63pCHmds3ROMTr0aqZo0I99zKzS/view?usp=drive_link" target="_blank" class="btn btn-primary">
                       <i class="fa-solid fa-book"></i>
                       Catálogo - Sexado
                     </a>
