inserção de promoções e política comercial dezembro/24

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="container">
     <!--POLÍTICA COMERCIAL-->
     <h1>Política Comercial</h1>
-    <h6>Novembro/2024</h6>
+    <h6>Dezembro/2024</h6>
     <div class="accordion accordion-flush" id="accordion-politica-comercial">
       <div class="accordion-item">
         <h2 class="accordion-header">
@@ -127,17 +127,17 @@
       <div class="col-sm-4">
         <!--Card da Promoção-->
         <div class="card mb-3">
-          <img src="./promocoes/BLACKOUT/CAPA.png" class="card-img-top img-fluid imgCard" alt="...">
+          <img src="./promocoes/TOURO-DA-VIRADA/capa.png" class="card-img-top img-fluid imgCard" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Blackout</h5>
+            <h5 class="card-title">Touro da Virada</h5>
             <p class="card-text"><strong>Pasta:</strong> Corte & Leite<br>
               <!--Validade da Campanha-->
-            <div class="campanha" data-validade="2024-11-30">
-              <i class="icon"></i><strong>Validade:</strong><br> 30 de Novembro de 2024 (até 18:00h)
+            <div class="campanha" data-validade="2025-01-30">
+              <i class="icon"></i><strong>Validade:</strong><br> 30 de Janeiro de 2025 (até 18:00h)
             </div>
             <!--Fim da Valodade da Campanha-->
             </p>
-            <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#blackout">
+            <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#virada">
               Material da Campanha
             </button>
           </div>
@@ -145,67 +145,75 @@
         <!--Fim do Card da Promoção-->
 
         <!-- Modal -->
-        <div class="modal fade" id="blackout" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="virada" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Blackout</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Touro da Virada</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
                 <div class="d-grid gap-2 ">
                   <h6>Documentação</h6>
-                  <a href="./promocoes/BLACKOUT/DCO BLACKOUT.pdf" target="_blank" class="btn btn-warning">
+                  <a href="./promocoes/TOURO-DA-VIRADA/DCO.pdf" target="_blank" class="btn btn-warning">
                     <i class="fa-solid fa-info"></i>
                     DCO
                   </a>
-                  <a href="./promocoes/BLACKOUT/COMISSÃO BLACKOUT.pdf" target="_blank" class="btn btn-warning">
+                  <a href="./promocoes/TOURO-DA-VIRADA/COMISSAO.pdf" target="_blank" class="btn btn-warning">
                     <i class="fa-solid fa-info"></i>
                     Comissão
                   </a>
                   <hr>
                   <h6>Material da Campanha</h6>
                   <h6>Corte Zebu</h6>
-                  <a href="./promocoes/BLACKOUT/PRECO CORTE ZEBU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/TOURO-DA-VIRADA/PRECO-CORTE-ZEBU-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preço - Corte Zebu
+                    Preço - Convencional
                   </a>
-                  <a href="./promocoes/BLACKOUT/CAT-CORTE-ZEBU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/TOURO-DA-VIRADA/PRECO-CORTE-ZEBU-SEXADO.pdf" target="_blank" class="btn btn-primary">
+                    <i class="fa-solid fa-file-invoice-dollar"></i>
+                    Preço - Sexado
+                  </a>
+                  <a href="https://drive.google.com/file/d/13y_4Cg4zlCnFx6_ecd5t-DCIqY-I6xC_/view?usp=drive_link" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-book"></i>
                     Catálogo - Corte Zebu
                   </a>
                   <h6>Corte Europeu</h6>
-                  <a href="./promocoes/BLACKOUT/PRECO CORTE EUROPEU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/TOURO-DA-VIRADA/PRECO-CORTE-EUROPEU-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preço - Corte Europeu
+                    Preço - Convencional
                   </a>
-                  <a href="./promocoes/BLACKOUT/CAT-CORTE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/TOURO-DA-VIRADA/PRECO-CORTE-EUROPEU-SEXADO.pdf" target="_blank" class="btn btn-primary">
+                    <i class="fa-solid fa-file-invoice-dollar"></i>
+                    Preço - Sexado
+                  </a>
+                  <a href="https://drive.google.com/file/d/1aBr5znT3goNR9HOiEqIciHd2nSqTiIHZ/view?usp=drive_link" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-book"></i>
                     Catálogo - Corte Europeu
                   </a>
                   <h6>Leite Zebu</h6>
-                  <a href="./promocoes/BLACKOUT/PRECO CONVENCIONAL LEITE ZEBU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/TOURO-DA-VIRADA/PRECO-LEITE-ZEBU-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
                     Preço - Convencional
                   </a>
-                  <a href="./promocoes/BLACKOUT/PRECO SEXADO LEITE ZEBU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/TOURO-DA-VIRADA/PRECO-LEITE-ZEBU-SEXADO.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
                     Preço - Sexado
                   </a>
-                  <a href="./promocoes/BLACKOUT/CAT-LEITE-ZEBU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="https://drive.google.com/file/d/1pz8xYUB6tEvj5CD1vYVMGiWJNWLQXW8j/view?usp=drive_link" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-book"></i>
                     Catálogo - Leite Zebu
                   </a>
                   <h6>Leite Europeu</h6>
-                  <a href="./promocoes/BLACKOUT/PRECO CONVENCIONAL LEITE EUROPEU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/TOURO-DA-VIRADA/PRECO-LEITE-EUROPEU-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
                     Preço - Convencional
                   </a>
-                  <a href="./promocoes/BLACKOUT/PRECO SEXADO LEITE EUROPEU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/TOURO-DA-VIRADA/PRECO-LEITE-EUROPEU-SEXADO.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
                     Preço - Sexado
                   </a>
-                  <a href="./promocoes/BLACKOUT/CAT-LEITE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="https://drive.google.com/file/d/1Amog6MC4OsWSbx4NO3PeDRjvkvg_mTsG/view?usp=drive_link" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-book"></i>
                     Catálogo - Leite Europeu
                   </a>
