--- a/navbar.html
+++ b/navbar.html
@@ -85,20 +85,20 @@
           Catálogos
         </a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" target="_blank" href="/crv-brazil/catalogos-de-touros/corte-zebu.pdf">
+          <li><a class="dropdown-item" target="_blank" href="https://drive.google.com/file/d/1ABhsJkaoEpAGUGYBxsWLm6sikqFc_uNL/view?usp=drive_link">
               <i class="fa-solid fa-book"></i>
               Corte Zebu
             </a></li>
-          <li><a class="dropdown-item" target="_blank" href="/crv-brazil/catalogos-de-touros/corte-europeu.pdf">
+          <li><a class="dropdown-item" target="_blank" href="https://drive.google.com/file/d/1aJ79RULb0S3JsgD-7CvmEwH8038cv0ds/view?usp=drive_link">
               <i class="fa-solid fa-book"></i>
               Corte Europeu
             </a></li>
           <hr>
-          <li><a class="dropdown-item" target="_blank" href="/crv-brazil/catalogos-de-touros/leite-zebu.pdf">
+          <li><a class="dropdown-item" target="_blank" href="https://drive.google.com/file/d/1SjfOTVLVDTGIgpo9q5tBvCqSWdCJCLx1/view?usp=drive_link">
               <i class="fa-solid fa-book"></i>
               Leite Zebu
             </a></li>
-          <li><a class="dropdown-item" target="_blank" href="/crv-brazil/catalogos-de-touros/leite-europeu.pdf">
+          <li><a class="dropdown-item" target="_blank" href="https://drive.google.com/file/d/1dCGd47Evn4EYLmPt118Tle-T1NbtqZ68/view?usp=drive_link">
               <i class="fa-solid fa-book"></i>
               Leite Europeu
             </a></li>
